--- a/report/templates/report/pdf.html
+++ b/report/templates/report/pdf.html
@@ -33,7 +33,7 @@
           {% if page.partner_logo %}
             {% image page.partner_logo height-36 as partner_logo %}
             <div class="logo-img-wrapper">
-              <img src="https://s3.amazonaws.com/newamericadotorg/{{ partner_logo.file.name }}"/>
+              <img src="{{ partner_logo.url }}"/>
             </div>
           {% endif %}
         </div>
@@ -41,7 +41,7 @@
           <div class="title-wrapper">
             <div class="cover-photo">
               {% image page.story_image fill-984x450 as cover_img %}
-              <img src="https://s3.amazonaws.com/newamericadotorg/{{ cover_img.file.name }}" />
+              <img src="{{ cover_img.url }}" />
             </div>
             <label class="date block">{{page.date|date:"F Y"}}</label>
             <h1 class="promo">{{page.title}}</h1>
