Add a maximum height to figure images in the pdf

--- a/report/templates/report/pdf_style.html
+++ b/report/templates/report/pdf_style.html
@@ -520,6 +520,7 @@
     .figure__image > img {
       display: block;
       width: 100%;
+      max-height: 637pt;
       height: auto;
       margin: 0 auto;
     }
