--- a/newamericadotorg/assets/scss/pages/post/blocks/_figure.scss
+++ b/newamericadotorg/assets/scss/pages/post/blocks/_figure.scss
@@ -1,5 +1,76 @@
-.figure{
+.figure {
+  $root: &;
+
   @include transition(opacity 0.35s ease);
+
+  &--new {
+    background-color: #f5f5f5;
+    padding: 20px;
+  }
+
+  &.width-1200 {
+    width: calc(100vw - 30px);
+    max-width: 1200px;
+    margin-left: calc(-50vw + 50% + 15px);
+
+    @media (min-width: 1230px) {
+      margin-left: -275px;
+    }
+  }
+
+  p, li, blockquote, a{
+    font-family: $label-font-family !important;
+    font-size: 0.8em !important;
+    line-height: 1.2;
+  }
+
+  p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  blockquote {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  &__title {
+    margin-top: 0;
+  }
+
+  &__graphics {
+    display: flex;
+    flex-direction: column;
+
+    & > div {
+      margin-bottom: 10px;
+    }
+
+    @include media-breakpoint(mobile) {
+      #{$root}--columns-2 & {
+        flex-flow: row wrap;
+        justify-content: space-between;
+        & > div {
+          flex-basis: calc(50% - 10px);
+          margin-bottom: 0;
+          &:not(:nth-child(2n)) {
+            margin-right: 20px;
+          }
+        }
+      }
+    }
+  }
+
+  &__post-graphics {
+    font-size: 0.8em !important;
+  }
+
+  &__footer {
+    font-family: $label-font-family;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+  }
 }
 
 .figure img.original{
