--- a/survey/templates/survey/survey.html
+++ b/survey/templates/survey/survey.html
@@ -8,16 +8,35 @@
 {% block content %}
 
   <div style="margin: 4rem 2rem">
-    <h2 style="border-bottom: 3px black solid">Survey Title: {{self.study_title}}</h2>
-    <h3>Organization: {{self.org}}</h3>  
-    <h3>Date:{% if self.month%}{{self.month}}/{% endif %}{{self.year}}</h3>  
-    {% if self.month%}
-    <h3>Month: {{self.month}}</h3>  
+    <h2 style="border-bottom: 3px black solid">Survey Title: {{page.study_title}}</h2>
+    {% with orgs=page.org.all %}
+      {% if orgs %}
+        {% for org in orgs %}
+          <h3>Organization: {{org.title}}</h3>  
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+    {% with years=page.year.all%}
+      {% if years %}
+        {% for year in years %}
+    <h3>Date:{% if page.month%}{{page.month}}/{% endif %}{{year.title}}</h3>  
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+    {% if page.month%}
+    <h3>Month: {{page.month}}</h3>  
     {% endif %}
-    <h3>Sample Size: {{self.sample_number}} </h3>  
-    <h3>Demographics: {{self.sample_demos}} </h3>  
+    <h3>Sample Size: {{page.sample_number}} </h3>  
+    {% with demos=page.demos_key.all %}
+      {% if demos %}
+        <h3>Demographics: </h3>  
+        {% for demo in demos%}
+          <li style="padding-left: 40px; margin: 1rem 0;"> {{demo.title}}</li>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     <h3>Key Findings:</h3>  
-    <p> {{self.findings|richtext}} </p>  
+    <p> {{page.findings|richtext}} </p>  
   </div>
 
 {% endblock%}
