--- a/newamericadotorg/assets/react/report/components/Body.scss
+++ b/newamericadotorg/assets/react/report/components/Body.scss
@@ -6,7 +6,7 @@ main#na-react__report {
   display: flex;
 }
 
-.report__body{
+.report__body {
   position: relative;
   max-width: 850px;
   margin-left: auto;
@@ -15,7 +15,7 @@ main#na-react__report {
   padding-top: 35px;
   padding-bottom: 25px;
 
-  @include media-breakpoint(desktop){
+  @include media-breakpoint(desktop) {
     padding-top: 90px;
   }
 
@@ -35,11 +35,11 @@ main#na-react__report {
     max-width: 650px;
   }
 
-  .block-table{
+  .block-table {
     margin-top: 25px;
   }
 
-  &.hide-title{
+  &.hide-title {
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0;
@@ -47,7 +47,7 @@ main#na-react__report {
       display: none;
     }
 
-    .report__body__article > div:last-child{
+    .report__body__article > div:last-child {
       margin-bottom: 85px;
     }
 
@@ -61,7 +61,12 @@ main#na-react__report {
   }
 }
 
-
+.report--polling-dashboard {
+  background: color(beige);
+  padding-top: 10px;
+  padding-bottom: 100px;
+  min-height: 100vh;
+}
 .report.single-page {
   padding-bottom: 90px;
 }
@@ -71,12 +76,12 @@ main#na-react__report {
   padding-bottom: 0;
 }
 
-.report__citation{
+.report__citation {
   color: color(turquoise);
   font-weight: bold;
   font-size: 0.7em;
   position: relative;
-  top: -.6em;
+  top: -0.6em;
   border-radius: 1.5em;
   min-width: 18px;
   height: 18px;
@@ -94,7 +99,7 @@ main#na-react__report {
 }
 
 .report__citation.active {
-  .citation-number{
+  .citation-number {
     opacity: 0;
   }
   .icon-plus {
@@ -105,9 +110,9 @@ main#na-react__report {
   }
 }
 
-
-.report__citation-wrapper{
-  .report__citation.active, &:hover .report__citation{
+.report__citation-wrapper {
+  .report__citation.active,
+  &:hover .report__citation {
     background: color(turquoise);
     color: color(white);
   }
@@ -127,7 +132,8 @@ main#na-react__report {
 }
 
 .oti .report__citation-wrapper {
-  .report__citation.active, &:hover .report__citation{
+  .report__citation.active,
+  &:hover .report__citation {
     background: color(oti-blue);
   }
 }
