--- a/newamericadotorg/assets/react/report/components/Body.scss
+++ b/newamericadotorg/assets/react/report/components/Body.scss
@@ -61,6 +61,12 @@ main#na-react__report {
   }
 }
 
+.report--polling-dashboard {
+  background: color(beige);
+  padding-top: 10px;
+  padding-bottom: 100px;
+  min-height: 100vh;
+}
 .report.single-page {
   padding-bottom: 90px;
 }
