--- a/newamericadotorg/assets/react/components/Tabs.scss
+++ b/newamericadotorg/assets/react/components/Tabs.scss
@@ -1,11 +1,13 @@
 .na-tabs {
+  &__nav {
+    background-color: color(white);
+  }
   &__nav.inline,
   &__active-content {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 25px;
     padding-right: 25px;
-    background-color: color(white);
   }
   &__nav-link {
     font-variant-numeric: lining-nums;
