--- a/newamericadotorg/assets/react/surveys-home/components/AboutTab.scss
+++ b/newamericadotorg/assets/react/surveys-home/components/AboutTab.scss
@@ -1,4 +1,8 @@
-.about-tab {
+.surveys-about-tab {
+  background-color: color(white);
+  margin-left: -25px;
+  margin-right: -25px;
+  padding: 25px;
   &__section {
     margin-bottom: 50px;
   }
