NAHE-28 : About tab styles clean up

--- a/newamericadotorg/assets/react/surveys-home/components/AboutTab.scss
+++ b/newamericadotorg/assets/react/surveys-home/components/AboutTab.scss
@@ -15,6 +15,9 @@
     margin-top: 0;
     margin-bottom: 1.5rem;
   }
+  p {
+    font-size: 15px;
+  }
   img {
     max-width: 400px;
     max-height: 200px;
