--- a/newamericadotorg/assets/react/surveys-home/components/CheckboxGroup.scss
+++ b/newamericadotorg/assets/react/surveys-home/components/CheckboxGroup.scss
@@ -1,12 +1,14 @@
 .checkbox__container {
   border-bottom: 1px solid #979797;
   padding: 24px 0;
+  overflow-y: scroll;
+  max-height: 418px;
 
   .checkbox__group-title {
     display: flex;
     justify-content: space-between;
     font-family: $ff-temp-circular;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 15px;
     cursor: pointer;
   }
