--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -1,7 +1,7 @@
 $header-font-family: 'Platform';
 $label-font-family: 'Circular';
 $paragraph-font-family: 'Lyon';
-$ff-temp-circular: 'Circular std';
+$ff-temp-circular: 'Circular';
 $header-height: 70px;
 $header-expanded-height: 165px;
 $header-transition-function: 0.3s ease;
