Refactor to fetch from api and render in the correct ID located on the surveys homepage

--- a/newamericadotorg/assets/react/components/CtaCard.scss
+++ b/newamericadotorg/assets/react/components/CtaCard.scss
@@ -14,7 +14,7 @@
   }
   &--email a {
     text-decoration: underline;
-    font-family: $ff-temp-circular;
+    font-family: $label-font-family;
   }
   &--link {
     display: flex;
