--- a/newamericadotorg/assets/react/components/Tabs.scss
+++ b/newamericadotorg/assets/react/components/Tabs.scss
@@ -11,7 +11,7 @@
   }
   &__nav-link {
     font-variant-numeric: lining-nums;
-    font-family: $ff-temp-circular;
+    font-family: $label-font-family;
     font-size: 0.625rem;
     font-weight: 700;
     line-height: 0.75rem;
