--- a/newamericadotorg/assets/react/surveys-homepage/components/TeaserListing.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/TeaserListing.scss
@@ -1,5 +1,14 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .teaser-listing {
   font-family: $label-font-family;
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -45,6 +54,8 @@
     padding: 25px 15px;
     background: color(white);
     border-left: 10px solid color(turquoise);
+    animation: fadeIn 0.3s ease-in;
+
     @include media-breakpoint(tablet) {
       min-height: 136px;
     }
@@ -63,27 +74,46 @@
         background-size: 100% 2px;
       }
     }
-    .teaser-listing__item-title {
-      font-weight: 800;
-      font-family: $label-font-family;
-      transition: color 0.15s ease;
-      margin: 0;
-    }
-    .teaser-listing__item-description {
+  }
+  &__item-title {
+    font-weight: 800;
+    font-family: $label-font-family;
+    transition: color 0.15s ease;
+    margin: 0;
+  }
+  &__item-description {
+    margin: 20px 0 0 0;
+    p {
       font-family: $label-font-family;
       font-size: 15px;
       font-weight: 400;
       line-height: 19px;
-      margin: 20px 0 0 0;
       display: block;
+      margin: 0;
     }
-    .teaser-listing__item-date {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      font-size: 15px;
-      color: color(black);
-      font-weight: 100;
+  }
+  &__item-date {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 15px;
+    color: color(black);
+    font-weight: 100;
+  }
+  &__load-more {
+    display: flex;
+    justify-content: flex-end;
+    .button {
+      min-width: 120px;
+    }
+    .loading-dots {
+      margin: 0;
+      padding: 0;
+    }
+    &:hover {
+      .loading-dots span {
+        color: color(white);
+      }
     }
   }
 }
