--- a/newamericadotorg/assets/react/components/Tabs.scss
+++ b/newamericadotorg/assets/react/components/Tabs.scss
@@ -1,13 +1,21 @@
 .na-tabs {
   &__nav {
     background-color: color(white);
+    &.inline {
+      padding: 0 25px;
+      @include media-breakpoint(tablet) {
+        padding: 0;
+      }
+    }
   }
   &__nav.inline,
   &__active-content {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    padding-right: 25px;
+    @include media-breakpoint(tablet) {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      padding-left: 25px;
+      padding-right: 25px;
+    }
   }
   &__nav-link {
     font-variant-numeric: lining-nums;
