--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -1,5 +1,5 @@
 $header-font-family: 'Platform';
-$label-font-family: 'Circular std';
+$label-font-family: 'Circular';
 $paragraph-font-family: 'Lyon';
 $header-height: 70px;
 $header-expanded-height: 165px;
