--- a/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: flex-end;
   border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+  margin-bottom: 25px;
+  &__label {
+    font-size: 21px;
+  }
   input {
     border: 0;
     padding: 0 0 0 10px;
