--- a/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
@@ -1,10 +1,18 @@
-.checkbox__container {
-  border-bottom: 1px solid #979797;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.checkbox-group {
+  border-bottom: 1px solid color(black, base, 0.3);
   padding: 24px 0;
   overflow-y: scroll;
   max-height: 425px;
 
-  .checkbox__group-title {
+  &__title {
     display: flex;
     justify-content: space-between;
     font-family: $label-font-family;
@@ -12,9 +20,18 @@
     font-size: 15px;
     cursor: pointer;
   }
-  .checkbox-group__options {
+  &__options {
+    max-height: 0;
+    overflow-y: hidden;
+    &.is-open {
+      max-height: none;
+      animation: fadeIn 0.3s ease-in;
+    }
+  }
+  &__option {
     display: flex;
     align-items: center;
+
     input {
       position: absolute;
       visibility: visible;
@@ -27,18 +44,18 @@
       border: 0;
       white-space: nowrap;
       &:checked {
-        + .checkbox__label::before {
-          border-color: #333;
-          background-color: #333;
+        + .checkbox-group__label::before {
+          border-color: color(black);
+          background-color: color(black);
         }
-        + .checkbox__label::after {
+        + .checkbox-group__label::after {
           opacity: 1;
           transform: scale(1) rotate(-45deg);
         }
       }
     }
 
-    .checkbox__label {
+    &__label {
       font-family: $label-font-family;
       position: relative;
       display: -webkit-box;
@@ -58,73 +75,23 @@
         box-sizing: border-box;
         width: 18px;
         height: 18px;
-        border: 2px solid #333;
+        border: 2px solid color(black);
         background-color: transparent;
       }
       &::after {
+        content: '';
         position: absolute;
         top: calc(50% - 2px);
         left: 5px;
         box-sizing: border-box;
         width: 9px;
         height: 5px;
-        border-bottom: 2px solid #fff;
-        border-left: 2px solid #fff;
+        border-bottom: 2px solid color(white);
+        border-left: 2px solid color(white);
         background: none;
-        color: #fff;
-        content: '';
+        color: color(white);
         transform: scale(0) rotate(-45deg);
       }
     }
-  }
-}
-
-.dv-Checkbox {
-  cursor: pointer;
-  input {
-    position: absolute;
-    visibility: visible;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    margin: -1px;
-    padding: 0;
-    width: 1px;
-    height: 1px;
-    border: 0;
-    white-space: nowrap;
-
-    -webkit-appearance: checkbox;
-    &:checked {
-      + .dv-Checkbox__label::before {
-        border-color: #333;
-        background-color: #333;
-      }
-      + .dv-Checkbox__label::after {
-        opacity: 1;
-        transform: scale(1) rotate(-45deg);
-      }
-    }
-  }
-
-  &__select {
-    margin: 0;
-    margin-top: 0.5rem;
-    padding: 0;
-    padding-bottom: 0.25rem;
-    border: none;
-    text-align: left;
-    text-decoration: underline;
-    text-transform: none;
-    letter-spacing: normal;
-    font-weight: normal;
-    font-size: 0.875rem;
-    cursor: pointer;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-  }
-  &__bullet::after {
-    padding: 0 0.25rem;
-    content: '\2022';
   }
 }
