--- a/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
@@ -1,7 +1,7 @@
 .survey-search {
   display: flex;
   align-items: flex-end;
-  border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+  border-bottom: 1px solid color(black, base, 0.3);
   margin-bottom: 25px;
   &__label {
     font-size: 21px;
