--- a/newamericadotorg/assets/react/surveys-homepage/components/SurveysTab.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/SurveysTab.scss
@@ -1,5 +1,5 @@
 .surveys-tab {
-  background: #f7f4f2;
+  background: color(beige);
   @include media-breakpoint(tablet) {
     margin-left: -15px;
     margin-right: -15px;
@@ -11,17 +11,31 @@
   }
 
   &__sidebar {
+    max-height: 0;
+    overflow: hidden;
+    @include transition(max-height 0.8s ease);
     @include media-breakpoint(tablet) {
+      max-height: none;
       width: 25%;
       padding-right: 0;
       margin-top: 57px;
       margin-right: 5%;
-      border-top: 1px solid #979797;
+      border-bottom: 1px solid color(black, base, 0.3);
+    }
+    &.is-open {
+      max-height: 300vh;
     }
   }
   &__results {
     @include media-breakpoint(tablet) {
       width: 70%;
+    }
+  }
+  &__open-mobile-filter {
+    padding: 0 0 5px 0;
+    border-bottom: 1px solid color(black, base, 0.3);
+    @include media-breakpoint(tablet) {
+      display: none;
     }
   }
 }
