Modify date filter

--- a/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/CheckboxGroup.scss
@@ -10,6 +10,7 @@
   border-bottom: 1px solid color(black, base, 0.3);
   padding: 24px 0;
   overflow-y: scroll;
+  overflow-x: hidden;
   max-height: 425px;
 
   &__title {
