--- a/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
+++ b/newamericadotorg/assets/react/surveys-homepage/components/Search.scss
@@ -4,6 +4,7 @@
   border-bottom: 1px solid color(black, base, 0.3);
   margin-bottom: 25px;
   &__label {
+    font-family: $header-font-family;
     font-size: 21px;
   }
   input {
