--- a/newamericadotorg/assets/scss/pages/survey/_page.scss
+++ b/newamericadotorg/assets/scss/pages/survey/_page.scss
@@ -29,7 +29,7 @@
     @include media-breakpoint(tablet) {
       padding-left: 25px;
       padding-right: 0;
-      min-width: 100%;
+      max-width: none;
     }
   }
   .card__text {
