NAHE-26: Theme commentary page

--- a/newamericadotorg/assets/scss/base/_margins-critical.scss
+++ b/newamericadotorg/assets/scss/base/_margins-critical.scss
@@ -76,6 +76,10 @@
   margin-top: 35px !important;
 }
 
+.-margin-top-35 {
+  margin-top: -35px;
+}
+
 .margin-60 {
   margin-top: 60px !important;
   margin-bottom: 60px !important;
