NAHE-26: Fix card styling

--- a/newamericadotorg/assets/scss/components/card/_accent.scss
+++ b/newamericadotorg/assets/scss/components/card/_accent.scss
@@ -8,6 +8,7 @@
   min-height: 136px;
   margin-left: -15px;
   margin-right: -15px;
+  cursor: pointer;
   &:hover {
     .card__title {
       text-decoration: underline;
