--- a/survey/templates/survey/commentary.html
+++ b/survey/templates/survey/commentary.html
@@ -11,30 +11,30 @@
 
   {% with surveys=page.assoc_surveys.all %}
     {% if surveys %}
-      <div class="post container margin-bottom-35 -margin-top-35">
-        <div class="row gutter-30">
-          <aside class="col-md-6 col-lg-2 margin-bottom-15"></aside>
-          <div class="col-lg-8 margin-bottom-15 post-body-wrapper">
-            <div class="row">
+      <div class="insights-page">
+        <div class="post container margin-bottom-35 insights-page__related-content">
+          <div class="row gutter-30">
+            <aside class="col-md-6 col-lg-2 margin-bottom-15"></aside>
+            <div class="col-lg-8 margin-bottom-15 post-body-wrapper">
               <div class="section-separator margin-bottom-15">
                 <div class="section-separator__text">
                   <h6 class="inline margin-0">Related Survey Reports</h6>
                 </div>
                 <div class="section-separator__line"></div>
               </div>
+              {% for item in surveys %}
+                <a href="{{ item.url }}" class="card--accent card margin-bottom-10">
+                  <h4 class="card__title">
+                    {{ item.title }}
+                  </h4>
+                  <div class="card__description">
+                    {{ item.description|richtext }}
+                  </div>
+                </a>
+              {% endfor %}
             </div>
-            {% for item in surveys %}
-              <a href="{{ item.url }}" class="card--accent card margin-bottom-10">
-                <h4 class="card__title">
-                  {{ item.title }}
-                </h4>
-                <div class="card__description">
-                  {{ item.description|richtext }}
-                </div>
-              </a>
-            {% endfor %}
+            <aside class="col-lg-2 "></aside>
           </div>
-          <aside class="col-lg-2 "></aside>
         </div>
       </div>
     {% endif %}
